# scry

./: .gitignore  LICENSE  README.md  pyproject.toml  scry
packaging/homebrew/: scry.rb
scry/: cli.py  segments.py
