[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "scry"
version = "0.1.0"
description = "One-line system status dashboard, byobu-inspired."
requires-python = ">=3.10"
license = "Apache-2.0"

[project.scripts]
scry = "scry.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["scry"]
